tests/paczka1/small_fuzzy/32184528.err
Error in line 1: 197 A947 31,4
Error in line 11: 197 S666 59,8
